# radio-rips

./: .gitignore  README.md  pyproject.toml
radio_rips/: app.py  config.py
radio_rips/static/css/: colours.css  loading.css  styles.css
radio_rips/templates/: base.html  history.html  index.html  job.html  settings.html
