[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "radio-rips"
version = "0.1.0"
description = "Web UI for ripping audio from YouTube, Spotify, Apple Music, Tidal, and Deezer"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "yt-dlp>=2024.0",
    "spotipy>=2.23",
    "requests>=2.31",
]

[project.optional-dependencies]
deezer = ["deemix>=3.6.6"]

[project.scripts]
radio-rips = "radio_rips.app:main"

[tool.setuptools.packages.find]
include = ["radio_rips*"]

[tool.setuptools.package-data]
radio_rips = ["templates/**/*", "static/**/*"]
